@@ -6,6 +6,7 @@
 * Dev - Made sure the regions also move the map to the banner when the setting is activated.
 * Dev - Added in an option to disable the maps.
 * Dev - PHP Class updates
+* Dev - Removing old templates
 
 ### 1.1.5 - 3th July 2019
 * Dev - Updated the help page.
